[gd_scene load_steps=39 format=3 uid="uid://cscea5qc4p4qk"]

[ext_resource type="Script" uid="uid://ddmmtrlr1k6va" path="res://src/characters/enemies/slime/Slime.gd" id="1_vn8bj"]
[ext_resource type="Texture2D" uid="uid://co4g61a05ey85" path="res://assets/sprites/characters/enemies/slime.png" id="2_ov3fh"]
[ext_resource type="PackedScene" uid="uid://bj4ybco6vs6gr" path="res://src/scenes/items/DroppedItem.tscn" id="2_wisr0"]
[ext_resource type="Script" uid="uid://dsja8nwr01sgh" path="res://src/components/combat/Hitbox.gd" id="3_nq2cd"]
[ext_resource type="Script" uid="uid://bxe6ei0rj0p6l" path="res://src/components/combat/Hurtbox.gd" id="4_huoql"]
[ext_resource type="Script" uid="uid://bo3rk6p1yoi3a" path="res://src/characters/fsm/StateMachine.gd" id="5_v0aeg"]
[ext_resource type="Script" uid="uid://borjan4xanvv5" path="res://src/characters/enemies/states/EnemyIdleState.gd" id="6_nq2cd"]
[ext_resource type="Script" uid="uid://i1d31ifdloqf" path="res://src/characters/enemies/states/EnemyWalkState.gd" id="7_huoql"]
[ext_resource type="Script" uid="uid://bbmnqybxkago" path="res://src/characters/enemies/states/EnemyAttackState.gd" id="8_0fvek"]
[ext_resource type="Script" uid="uid://drqkd1jpnb2wt" path="res://src/characters/enemies/states/EnemyPatrolState.gd" id="9_nq2cd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jfo11"]

[sub_resource type="Animation" id="Animation_nq2cd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pfy11"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_huoql"]
resource_name = "idle_left"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_0fvek"]
resource_name = "idle_right"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_10a5e"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 5]
}

[sub_resource type="Animation" id="Animation_ck2hb"]
resource_name = "walk_down"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, -2, -2, -2),
"update": 0,
"values": [Vector2(0, -12), Vector2(0, -12), Vector2(0, -15), Vector2(0, -12)]
}

[sub_resource type="Animation" id="Animation_gd7gp"]
resource_name = "walk_left"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, -2, -2, -2),
"update": 0,
"values": [Vector2(0, -12), Vector2(0, -12), Vector2(0, -15), Vector2(0, -12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_hqndb"]
resource_name = "walk_right"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, -2, -2, -2),
"update": 0,
"values": [Vector2(0, -12), Vector2(0, -12), Vector2(0, -15), Vector2(0, -12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qbmv3"]
resource_name = "walk_up"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, -2, -2, -2),
"update": 0,
"values": [Vector2(0, -12), Vector2(0, -12), Vector2(0, -15), Vector2(0, -12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_huoql"]
_data = {
&"RESET": SubResource("Animation_nq2cd"),
&"idle_down": SubResource("Animation_pfy11"),
&"idle_left": SubResource("Animation_huoql"),
&"idle_right": SubResource("Animation_0fvek"),
&"idle_up": SubResource("Animation_10a5e"),
&"walk_down": SubResource("Animation_ck2hb"),
&"walk_left": SubResource("Animation_gd7gp"),
&"walk_right": SubResource("Animation_hqndb"),
&"walk_up": SubResource("Animation_qbmv3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pfy11"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nq2cd"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_huoql"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0fvek"]
animation = &"idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_10a5e"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pfy11")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_nq2cd")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_huoql")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_0fvek")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_10a5e"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ck2hb"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gd7gp"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hqndb"]
animation = &"walk_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_qbmv3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_10a5e")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ck2hb")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_gd7gp")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_hqndb")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pfy11"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nq2cd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_huoql"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pfy11"]
states/End/position = Vector2(135, 44)
states/IdleState/node = SubResource("AnimationNodeBlendSpace2D_10a5e")
states/IdleState/position = Vector2(298, 119)
states/Start/position = Vector2(135, 119)
states/WalkState/node = SubResource("AnimationNodeBlendSpace2D_qbmv3")
states/WalkState/position = Vector2(551, 119)
transitions = ["Start", "IdleState", SubResource("AnimationNodeStateMachineTransition_pfy11"), "IdleState", "WalkState", SubResource("AnimationNodeStateMachineTransition_nq2cd"), "WalkState", "IdleState", SubResource("AnimationNodeStateMachineTransition_huoql")]

[sub_resource type="CircleShape2D" id="CircleShape2D_tufbh"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_1n3me"]
radius = 14.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_sdfkt"]
radius = 56.0

[node name="Slime" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 201
script = ExtResource("1_vn8bj")
dropped_item_scene = ExtResource("2_wisr0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("2_ov3fh")
hframes = 16
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jfo11")
debug_color = Color(0.919787, 2.88785e-06, 0.507552, 0.509804)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_huoql")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_pfy11")
anim_player = NodePath("../AnimationPlayer")
parameters/IdleState/blend_position = Vector2(0, 0.993789)
parameters/WalkState/blend_position = Vector2(-0.00247324, 1)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 260
script = ExtResource("3_nq2cd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource("CircleShape2D_tufbh")
debug_color = Color(1, 0.012597, 0.0137024, 0.42)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
script = ExtResource("4_huoql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_1n3me")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_sdfkt")
debug_color = Color(0.623665, 0.532772, 0, 0.42)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_v0aeg")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("6_nq2cd")

[node name="WalkState" type="Node" parent="StateMachine"]
script = ExtResource("7_huoql")

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("8_0fvek")

[node name="PatrolState" type="Node" parent="StateMachine"]
script = ExtResource("9_nq2cd")
